// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventTitle renders with also subtitle 1`] = `
<span>
  Conference Title
  <span>
    <span>
       : 
    </span>
    Sub
  </span>
</span>
`;

exports[`EventTitle renders with everything 1`] = `
<span>
  Conference Title
  <span>
    <span>
       : 
    </span>
    Sub
  </span>
  <span>
     (
    CTest
    )
  </span>
</span>
`;

exports[`EventTitle renders with only title 1`] = `
<span>
  Conference Title
</span>
`;
